moved media files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <div class = "interface">
       <button class="add_btn">Add Vertex</button><label for="add_btn" id="overflow">Max</label><div class="tooltip">
-        <img id="my_image" src="quest_mark.png" alt="image error">
+        <img id="my_image" src="/media/quest_mark.png" alt="image error">
         <span class="tooltiptext">Two edges in complemented graph are connected only if <i>they don't have any connections in initial graph.</i> It is assumed that each pair of vertices in initial graph has 0 or 1 connections maximum</span>
       </div><button class="complement">Switch to complement graph</button>
       <hr>      
