--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     
   </body>
   <script type = "text/javascript">
+
+            // отключаем сразу анимацию для бокса
+        // чтобы запустить ее, только тогда, когда будет хотя бы одна вершина
+        var viz = document.getElementById("viz");
+        viz.style.animationPlayState="paused";
+        var max_overflow = document.getElementById("overflow");
+        max_overflow.style.animationPlayState = "paused";
+
         // настр для vis.js
         var nodes = new vis.DataSet();
         var edges = new vis.DataSet();
